--- a/AngularProjetEchec/src/app/projet/component/jeu/plateau/plateau64cases/plateau64cases.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/plateau/plateau64cases/plateau64cases.component.html
@@ -1,5 +1,7 @@
 <div class="grillePlateauPrincipal" [ngClass]="couleur">
   <ng-container *ngFor="let n of nombres">
-    <div *ngFor="let l of lettres" id="{{ l }}{{ n }}">{{ l }}{{ n }}</div>
+    <div *ngFor="let l of lettres" id="{{ l }}{{ n }}">
+      <!-- <img src="assets/SpritePiecesPNG/RoiBlanc.png" /> -->
+    </div>
   </ng-container>
 </div>
