--- a/AngularProjetEchec/src/app/projet/component/elements-commun/menu/menu.component.html
+++ b/AngularProjetEchec/src/app/projet/component/elements-commun/menu/menu.component.html
@@ -2,7 +2,7 @@
   <nav>
     <ul>
       <li class="active">
-        <a routerLink="/acceuil">Projet Echecs</a>
+        <a routerLink="/accueil">Projet Echecs</a>
       </li>
 
       <li>
