--- a/AngularProjetEchec/src/app/projet/component/accueil/accueil.component.html
+++ b/AngularProjetEchec/src/app/projet/component/accueil/accueil.component.html
@@ -1,20 +1,20 @@
 
 <div class="milieu">
   <h2>
-    Bienvenue, joueur !
+    Bienvenue, {{ utilisateur.pseudo}} !
   </h2>
   <p>
     Veuillez choisir un mode de jeu :
   </p>
 
   <div class="zoneBouton">
-    <button class="open-parametres-jcj grosBouton">JCJ</button>
-    <button class="open-parametres-jcia grosBouton">JCIA</button>
-    <button class="open-parametres-probleme grosBouton">Probleme</button>
+    <button (click)="openJcJ()" class="open-parametres-jcj grosBouton">JCJ</button>
+    <button (click)="openJcIA()" class="open-parametres-jcia grosBouton">JCIA</button>
+    <button (click)="openProbleme()" class="open-parametres-probleme grosBouton">Probleme</button>
   </div>
 
   <!-- Afficher les paramètres de partie -->
-  <div class="parametres-container">
+  <div class="parametres-container" [ngClass]="{'open' : parametresTypePartie!=''}">
 
     <div class="parametres">
 
@@ -22,11 +22,11 @@
         Type de partie
       </div>
 
-      <div class="parametres-content">
+      <div class="parametres-content" >
 
-        <form>
+        <form [ngSwitch]="parametresTypePartie">
 
-          <table class="jcj">
+          <table class="jcj" *ngSwitchCase ='"JcJ"'>
 
             <tr>
               <th colspan="2">
@@ -37,11 +37,11 @@
 
             <tr>
               <td><label>Pseudo adversaire / aléatoire </label></td>
-              <td><input type="text" name="choix-adversaire" value="aleatoire" /></td>
+              <td><input [(ngModel)]="paramJcJPseudoAdversaire" type="text" name="choix-adversaire" value="aleatoire" /></td>
             </tr>
             <tr>
               <td><label>Mode de jeu : </label></td>
-              <td><select name="mode-jeu">
+              <td><select [(ngModel)]="paramJcJModeJeu" name="mode-jeu">
                   <option value="bullet">Bullet</option>
                   <option value="blitz">Blitz</option>
                   <option value="rapide">Rapide</option>
@@ -49,7 +49,7 @@
             </tr>
             <tr>
               <td><label>Handicap : </label></td>
-              <td><select name="handicap">
+              <td><select [(ngModel)]="paramJcJHandicap" name="handicap">
                   <option value="aucun">aucun </option>
                   <option value="type1">type1 </option>
                   <option value="type2">type2 </option>
@@ -58,7 +58,7 @@
 
           </table>
 
-          <table class="jcia">
+          <table class="jcia" *ngSwitchCase ='"JcIA"'>
 
             <tr>
               <th colspan="2"><label>Jouer contre une IA</label></th>
@@ -66,7 +66,7 @@
 
             <tr>
               <td><label>Choix difficulté : </label></td>
-              <td><select name="difficulte">
+              <td><select [(ngModel)]="paramJcIADifficulte" name="difficulte">
                   <option value="facile">Facile </option>
                   <option value="moyen">Moyen </option>
                   <option value="difficile">Difficile </option>
@@ -77,7 +77,7 @@
 
           </table>
 
-          <table class="probleme">
+          <table class="probleme" *ngSwitchCase ='"Probleme"'>
 
             <tr>
               <th colspan="2"><label name="description">Jouer un problème</label></th>
@@ -85,7 +85,7 @@
 
             <tr>
               <td><label>Choix difficulté : </label></td>
-              <td><select name="difficulte">
+              <td><select [(ngModel)]="paramProblemeDifficulte" name="difficulte">
                   <option value="facile">Facile </option>
                   <option value="moyen">Moyen </option>
                   <option value="difficile">Difficile </option>
@@ -97,26 +97,56 @@
             <tr>
               <td colspan = "2" style="text-align: center ;">
                 <p>Liste des problèmes
-                <button class="petitBouton">
-                  <a href="PageProbleme.html"></a>
-                  Go !
-                </button>
+                <button (click)="listePb()" class="petitBouton">Go !</button>
               </p>
               </td>
             </tr>
 
           </table>
 
+          <p *ngSwitchDefault>Y a rien </p>
+
         </form>
 
-        <button class="close-parametres petitBouton">Annuler</button>
+        <button (click)="annuler()" class="close-parametres petitBouton">Annuler</button>
 
-        <a href="PageJeu.html" target="_self"><button  class="petitBouton">Jouer !</button></a>
+        <button (click)="jouer()" class="petitBouton">Jouer !</button>
 
       </div>
     </div>
 
   </div>
+
+</div>
+
+<div class="droite">
+
+  <div><h1>Elo</h1></div>
+
+  <table>
+    <thead>
+      <tr>
+        <td>Joueur 1</td>
+        <td>Joueur 2</td>
+
+        <td>Resultat</td>
+
+      </tr>
+    </thead>
+    <tbody class="historique">
+      <!--
+      <ng-container *ngFor="let partie of {utilisateurHistorique}">
+        <tr>
+          <td>{{ partie.j1 }}</td>
+          <td>{{ partie.j2 }}</td>
+          <td>{{ partie.vainqueur }}</td>
+        </tr>
+      </ng-container>
+    -->
+    </tbody>
+  </table>
+
+  <div><a href="PageHistoriqueParties.html" target="_self"><button class="grosBouton">Aller à l'historique</button></a></div>
 
 </div>
 
