init jeu + dragndrop

--- a/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
@@ -12,7 +12,7 @@
     <app-plateau [couleurJoueur]="couleurJoueur"></app-plateau>
 
     <div class="grilleCentraleNomChrono">
-      <div>Mon nom</div>
+      <div>{{ utilisateur.pseudo }} ({{ utilisateur.elo }})</div>
       <div id="h1"></div>
     </div>
 
