--- a/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
@@ -22,4 +22,8 @@
   </div>
 
   <app-colonne-boutons></app-colonne-boutons>
+  <div class="divHistoriqueEtChat">
+    <div></div>
+    <app-chat></app-chat>
+  </div>
 </div>
