--- a/AngularProjetEchec/src/app/projet/component/profil/profil.component.html
+++ b/AngularProjetEchec/src/app/projet/component/profil/profil.component.html
@@ -9,7 +9,7 @@
           type="text"
           value="{{ utilisateur.pseudo }}"
           disabled
-        />/>
+        />
       </td>
     </tr>
     <tr>
@@ -20,7 +20,7 @@
           type="password"
           value="{{ utilisateur.mdp }}"
           disabled
-        />/>
+        />
       </td>
     </tr>
     <tbody>
@@ -32,18 +32,13 @@
             type="text"
             value="{{ utilisateur.prenom }}"
             disabled
-          />/>
+          />
         </td>
       </tr>
       <tr>
         <td>Nom</td>
         <td>
-          <input
-            id="nom"
-            type="text"
-            value="{{ utilisateur.nom }}"
-            disabled
-          />/>
+          <input id="nom" type="text" value="{{ utilisateur.nom }}" disabled />
         </td>
       </tr>
       <tr>
@@ -54,7 +49,7 @@
             type="email"
             value="{{ utilisateur.email }}"
             disabled
-          />/>
+          />
         </td>
       </tr>
       <tr>
