changement accueil pb

--- a/AngularProjetEchec/src/app/projet/component/probleme/probleme.component.html
+++ b/AngularProjetEchec/src/app/projet/component/probleme/probleme.component.html
@@ -51,6 +51,14 @@
         </thead>
 
         <tbody>
+          <ng-container *ngFor="let probleme of listeProblemes">
+            <tr>
+              <td>{{ probleme.id }}</td>
+              <td>{{ probleme.fenDepart }}</td>
+              <td>{{ probleme.difficulte }}</td>
+              <td>A FAIRE</td>
+            </tr>
+          </ng-container>
 
         </tbody>
 
