--- a/AngularProjetEchec/src/app/projet/component/jeu/plateau/plateau64cases/plateau64cases.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/plateau/plateau64cases/plateau64cases.component.html
@@ -5,6 +5,7 @@
       *ngFor="let l of lettres"
       id="{{ l }}{{ n }}"
       name="{{ l }}{{ n }}"
+      (coordonneesDepart)="addCoord($event)"
     >
       <!-- <img src="assets/SpritePiecesPNG/RoiBlanc.png" /> -->
     </div>
