--- a/AngularProjetEchec/src/app/projet/component/accueil/accueil.component.html
+++ b/AngularProjetEchec/src/app/projet/component/accueil/accueil.component.html
@@ -146,7 +146,7 @@
     </tbody>
   </table>
 
-  <div><a href="PageHistoriqueParties.html" target="_self"><button class="grosBouton">Aller à l'historique</button></a></div>
+  <div><button (click)="renvoiHistorique()" class="grosBouton">Aller à l'historique</button></div>
 
 </div>
 
