--- a/AngularProjetEchec/src/app/projet/component/probleme/probleme.component.html
+++ b/AngularProjetEchec/src/app/projet/component/probleme/probleme.component.html
@@ -54,7 +54,7 @@
           <ng-container *ngFor="let probleme of listeProblemes">
             <tr>
               <td>{{ probleme.id }}</td>
-              <td>{{ probleme.fenDepart }}</td>
+              <td>{{ listeImages[probleme.id!] }}</td>
               <td>{{ probleme.difficulte }}</td>
               <td>A FAIRE</td>
             </tr>
