--- a/AngularProjetEchec/src/app/projet/component/profil/profil.component.html
+++ b/AngularProjetEchec/src/app/projet/component/profil/profil.component.html
@@ -58,6 +58,6 @@
       </tr>
     </tbody>
   </table>
-  <button id="modifier">Modifier</button>
-  <button id="valider" disabled>Valider</button>
+  <button (click)="modifier()" id="modifier">Modifier</button>
+  <button (click)="valider()" id="valider" disabled>Valider</button>
 </form>
