--- a/AngularProjetEchec/src/app/projet/component/probleme/probleme.component.html
+++ b/AngularProjetEchec/src/app/projet/component/probleme/probleme.component.html
@@ -54,9 +54,12 @@
           <ng-container *ngFor="let probleme of listeProblemes">
             <tr>
               <td>{{ probleme.id }}</td>
-              <td>{{ listeImages[probleme.id!] }}</td>
-              <td>{{ probleme.difficulte }}</td>
-              <td>A FAIRE</td>
+              <td>{{ probleme.fenDepart }}</td>
+              <td>{{ probleme.difficulteCategorie }} ({{probleme.difficulte}})</td>
+              <td>
+                <div *ngIf="listeProblemesResolus.includes(probleme.id!); else elseBlock">OUI</div>
+                <ng-template #elseBlock>NON</ng-template>
+              </td>
             </tr>
           </ng-container>
 
