--- a/AngularProjetEchec/src/app/projet/component/profil/profil.component.html
+++ b/AngularProjetEchec/src/app/projet/component/profil/profil.component.html
@@ -1,10 +1,12 @@
-<form method="POST">
+<form (ngSubmit)="submit()" #monForm="ngForm">
   <table class="">
     <thead></thead>
     <tr>
       <td>Pseudo</td>
       <td>
         <input
+          name="pseudo"
+          [(ngModel)]="pseudo"
           id="pseudo"
           type="text"
           value="{{ utilisateur.pseudo }}"
@@ -16,6 +18,7 @@
       <td>Mot de passe</td>
       <td>
         <input
+          class="mdp"
           id="mdp"
           type="password"
           value="{{ utilisateur.mdp }}"
@@ -59,5 +62,5 @@
     </tbody>
   </table>
   <button (click)="modifier()" id="modifier">Modifier</button>
-  <button (click)="valider()" id="valider" disabled>Valider</button>
+  <button [disabled]="monForm.invalid">Valider</button>
 </form>
