dragdrop + pb requete

--- a/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
@@ -23,8 +23,8 @@
 
   <app-colonne-boutons></app-colonne-boutons>
 
-  <div class="divHistoriqueEtChat">
-    <div></div>
+  <div>
+    <div class="divHistoriqueEtChat"></div>
     <app-chat></app-chat>
   </div>
 </div>
