drag drop synchro pb si prise

--- a/AngularProjetEchec/src/app/projet/component/jeu/plateau/plateau64cases/plateau64cases.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/plateau/plateau64cases/plateau64cases.component.html
@@ -1,4 +1,4 @@
-<div class="grillePlateauPrincipal" [ngClass]="couleur">
+<div class="grillePlateauPrincipal" [ngClass]="couleur" #eventTarget>
   <ng-container *ngFor="let n of nombres">
     <div
       app-case
