--- a/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.css
+++ b/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.css
@@ -1,9 +1,11 @@
 .milieu {
   display: flex;
-  width: 70%;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .grilleCentral5Verti {
+  width: 70%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -47,6 +49,7 @@
 }
 
 .divHistoriqueEtChat {
+  width: 30%;
   height: 50%;
   border: solid 1px black;
   box-sizing: border-box;
