--- a/AngularProjetEchec/src/app/projet/component/elements-commun/menu/menu.component.html
+++ b/AngularProjetEchec/src/app/projet/component/elements-commun/menu/menu.component.html
@@ -10,7 +10,17 @@
       </li>
 
       <li>
-        <a routerLink="/jeu">Jeu en cours</a>
+        <a
+          [routerLink]="[
+            {
+              outlets: {
+                primary: ['jeu'],
+                droite: ['chat']
+              }
+            }
+          ]"
+          >Jeu en cours</a
+        >
       </li>
 
       <li>
