--- a/AngularProjetEchec/src/app/projet/component/jeu/colonne-hist-chat/chat/chat.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/colonne-hist-chat/chat/chat.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header">CHAT :</div>
       <div class="card-body">
-        <ul class="list-group list-group-flush">
+        <ul class="liste">
           <li class="list-group-item" *ngFor="let message of greetings">
             <span class="user-message">{{ message }}</span>
           </li>
