--- a/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.html
+++ b/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.html
@@ -3,26 +3,26 @@
   <table class="statsgenerales">
     <thead>
       <tr>
-        <td>Victoires</td>
-        <td>Défaites</td>
-        <td>Matchs nul</td>
+        <td>Taux de victoires</td>
+        <td>Nb de parties jouées</td>
+        <!-- <td>Matchs nul</td>
         <td>% de victoires</td>
         <td>% de défaites</td>
-        <td>% de nul</td>
+        <td>% de nul</td> -->
       </tr>
     </thead>
     <tbody>
       <tr>
+        <td></td>
         <td>100</td>
-        <td>100</td>
-        <td>100</td>
+        <!-- <td>100</td>
         <td>33%</td>
         <td>33%</td>
-        <td>33%</td>
+        <td>33%</td> -->
       </tr>
     </tbody>
   </table>
-  <br />
+  <!-- <br />
   <table class="statsblanc">
     <thead>
       <tr>
@@ -67,8 +67,11 @@
         <td>33%</td>
       </tr>
     </tbody>
-  </table>
+  </table> -->
 </div>
-<div class="droite">
+<div>
+  <button (click)="retour()">Retour à l'accueil</button>
+</div>
+<!-- <div class="droite">
   <div>Evolution du Elo</div>
-</div>
+</div> -->
