modif profil fonctionnel + stats

--- a/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.html
+++ b/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.html
@@ -5,18 +5,19 @@
       <tr>
         <td>Taux de victoires</td>
         <td>Nb de parties jouées</td>
-        <!-- <td>Matchs nul</td>
-        <td>% de victoires</td>
+        <td>Joueur</td>
+        <!-- <td>% de victoires</td>
         <td>% de défaites</td>
-        <td>% de nul</td> -->
+        <td>% de nul</td>
+        -->
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td></td>
-        <td>100</td>
-        <!-- <td>100</td>
-        <td>33%</td>
+        <td>{{ statistiques.tauxVictoire }}</td>
+        <td>{{ statistiques.partieJouees }}</td>
+        <td>{{ statistiques.utilisateur }}</td>
+        <!-- <td>33%</td>
         <td>33%</td>
         <td>33%</td> -->
       </tr>
