--- a/AngularProjetEchec/src/app/projet/component/profil/edit-profil/edit-profil.component.html
+++ b/AngularProjetEchec/src/app/projet/component/profil/edit-profil/edit-profil.component.html
@@ -1,5 +1,5 @@
 <section>
-  <form method="PATCH" (ngSubmit)="modifier()" [formGroup]="form">
+  <form method="PUT" (ngSubmit)="modifier()" [formGroup]="form">
     <fieldset>
       <div>
         <h2 style="text-align: center">Modification du profil</h2>
