--- a/AngularProjetEchec/src/app/projet/component/accueil/accueil.component.html
+++ b/AngularProjetEchec/src/app/projet/component/accueil/accueil.component.html
@@ -110,6 +110,7 @@
 
         <button (click)="annuler()" class="close-parametres petitBouton">Annuler</button>
 
+        <a routerLink="/jeu/{{ parametresTypePartie }}">JouerTest</a>
         <button (click)="jouer()" class="petitBouton">Jouer !</button>
 
       </div>
