--- a/AngularProjetEchec/src/app/projet/component/jeu/colonne-boutons/colonne-boutons.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/colonne-boutons/colonne-boutons.component.html
@@ -1,6 +1,6 @@
 <div class="flexAbandonnerNul">
-  <button>Abandonner</button>
-  <button class="btnNul">Nul</button>
-  <button name="reculer">-</button>
-  <button name="avancer">+</button>
+  <button class="petitBouton">Abandonner</button>
+  <button class="btnNul petitBouton">Nul</button>
+  <button class="petitBouton" name="reculer">-</button>
+  <button class="petitBouton" name="avancer">+</button>
 </div>
