--- a/AngularProjetEchec/src/app/projet/component/jeu/colonne-hist-chat/colonne-hist-chat.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/colonne-hist-chat/colonne-hist-chat.component.html
@@ -1,6 +1,4 @@
-<div>
-  <div class="grilleHistoriqueEtChat">
-    <div class="divHistoriqueEtChat">Historique Coups</div>
-    <app-chat class="divHistoriqueEtChat"></app-chat>
-  </div>
+<div class="grilleHistoriqueEtChat">
+  <div class="divHistoriqueEtChat historiqueCoups {">Historique Coups</div>
+  <app-chat class="divHistoriqueEtChat"></app-chat>
 </div>
