--- a/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
@@ -1,8 +1,8 @@
-<div class="milieu">
+<div class="grilleMilieu">
   <div class="grilleCentral5Verti">
     <div class="grilleCentraleNomChrono">
       <div>Nom adversaire</div>
-      <div id="h2"></div>
+      <div id="h2">Chrono adv</div>
     </div>
 
     <div class="piecesCapturees" nom="piecesCaptureesHaut">
@@ -13,12 +13,13 @@
 
     <div class="grilleCentraleNomChrono">
       <div>{{ utilisateur.pseudo }} ({{ utilisateur.elo }})</div>
-      <div id="h1"></div>
+      <div id="h1">Chrono perso</div>
     </div>
 
     <div class="piecesCapturees" nom="piecesCaptureesBas">
       <p>Pieces capturées</p>
     </div>
   </div>
+
   <app-colonne-boutons></app-colonne-boutons>
 </div>
