--- a/AngularProjetEchec/src/app/projet/component/jeu/colonne-boutons/colonne-boutons.component.css
+++ b/AngularProjetEchec/src/app/projet/component/jeu/colonne-boutons/colonne-boutons.component.css
@@ -1,6 +1,20 @@
 .flexAbandonnerNul {
-  width: 100%;
+  width: 80%;
+  height: 100%;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.petitBouton {
+  box-shadow: 0 0 0 1px black;
+  border: 1px solid #ccc;
+  border-radius: 32px;
+  text-align: center;
+  font-weight: bold;
+  padding: 5px 10px 5px 10px;
+  margin: 15px;
+  background-color: #ffffffd3;
+  color: rgb(0, 0, 0);
 }
