--- a/AngularProjetEchec/src/app/projet/component/jeu/colonne-hist-chat/chat/chat.component.css
+++ b/AngularProjetEchec/src/app/projet/component/jeu/colonne-hist-chat/chat/chat.component.css
@@ -2,15 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: grey;
+  background-color: rgb(1, 1, 1, 0.7);
+
   height: 100%;
   max-height: 100%;
 }
 
 ul {
   list-style: none;
-  /* margin-block-start: 10px;
-  margin-block-end: 10px; */
   padding-inline-start: 10px;
 }
 
@@ -21,15 +20,25 @@ ul {
 }
 
 .chat-container .card {
+  display: grid;
+  grid-template-rows: 10% 75% 0% 15%;
   height: 100%;
 }
-.chat-container .card-header {
-  height: 10%;
+
+.card-header {
+  padding: 10px;
 }
-.chat-container .card-body {
-  height: 80%;
+
+.card-body {
+  /* overflow: scroll; */
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .liste {
   text-align: left;
+}
+
+form {
+  padding: 10px;
 }
