--- a/AngularProjetEchec/src/app/projet/component/jeu/colonne-hist-chat/chat/chat.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/colonne-hist-chat/chat/chat.component.html
@@ -2,7 +2,7 @@
   <div class="chat-box">
     <div class="card">
       <div class="card-header">CHAT :</div>
-      <div class="card-body">
+      <div class="card-body" #scrollMe>
         <ul class="liste">
           <li class="list-group-item" *ngFor="let message of greetings">
             <span class="user-message">{{ message }}</span>
