--- a/AngularProjetEchec/src/app/projet/component/elements-commun/menu/menu.component.html
+++ b/AngularProjetEchec/src/app/projet/component/elements-commun/menu/menu.component.html
@@ -7,7 +7,7 @@
             {
               outlets: {
                 primary: ['accueil'],
-                droite: ['divDroite']
+                droite: ['divDroiteAccueil']
               }
             }
           ]"
@@ -26,20 +26,6 @@
             }
           ]"
           >Historique</a
-        >
-      </li>
-
-      <li>
-        <a
-          [routerLink]="[
-            {
-              outlets: {
-                primary: ['jeu'],
-                droite: ['chat']
-              }
-            }
-          ]"
-          >Jeu en cours</a
         >
       </li>
 
