--- a/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.html
+++ b/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.html
@@ -71,7 +71,7 @@
   </table> -->
 </div>
 <div>
-  <button (click)="retour()">Retour à l'accueil</button>
+  <button (click)="retour()" class="petitBouton">Retour à l'accueil</button>
 </div>
 <!-- <div class="droite">
   <div>Evolution du Elo</div>
