--- a/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.css
+++ b/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.css
@@ -18,6 +18,7 @@
   display: grid;
   grid-template-columns: 50% 50%;
   color: white;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .grilleCentraleNomChrono div {
@@ -35,6 +36,7 @@
   position: left;
   text-align: left;
   color: white;
+  background-color: rgb(0, 0, 0, 0.7);
 }
 
 .piecesCapturees > p {
