--- a/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.css
+++ b/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.css
@@ -4,7 +4,6 @@ table {
   background-color: rgb(0, 0, 0);
 }
 
-
 td {
   text-align: center;
   padding: 5px;
@@ -16,11 +15,22 @@ table tr:nth-child(odd) {
 
 table tr:nth-child(even) {
   background-color: rgb(158, 158, 158);
-
-
 }
 table tr:nth-child(1) {
-  background-color:rgb(51, 51, 51);
+  background-color: rgb(51, 51, 51);
   font-weight: bold;
-  color:  rgb(255, 255, 255) ;
+  color: rgb(255, 255, 255);
+}
+
+.petitBouton {
+  box-shadow: 0 0 0 1px black;
+  border: 1px solid #ccc;
+  border-radius: 32px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 5px 10px 5px 10px;
+  margin: 15px;
+  background-color: #ffffffd3;
+  color: rgb(0, 0, 0);
 }
