--- a/AngularProjetEchec/src/app/projet/component/accueil/accueil.component.html
+++ b/AngularProjetEchec/src/app/projet/component/accueil/accueil.component.html
@@ -75,9 +75,8 @@
             <tr>
               <td><label>Choix difficulté : </label></td>
               <td>
-                <select [(ngModel)]="paramJcIADifficulte" name="difficulte">
+                <select [(ngModel)]="paramJcIADifficulte" name="difficulte" value="facile">
                   <option value="facile">Facile</option>
-                  <option value="moyen">Moyen</option>
                   <option value="difficile">Difficile</option>
                 </select>
               </td>
