--- a/AngularProjetEchec/src/app/projet/component/profil/profil.component.html
+++ b/AngularProjetEchec/src/app/projet/component/profil/profil.component.html
@@ -24,5 +24,7 @@
       </tr>
     </tbody>
   </table>
-  <button (click)="modifier()" id="modifier">Modifier</button>
+  <button (click)="modifier()" id="modifier" class="petitBouton">
+    Modifier
+  </button>
 </form>
