--- a/AngularProjetEchec/src/app/projet/component/profil/profil.component.css
+++ b/AngularProjetEchec/src/app/projet/component/profil/profil.component.css
@@ -1,9 +1,17 @@
-table {
-  color: aliceblue;
+.petitBouton {
+  box-shadow: 0 0 0 1px black;
+  border: 1px solid #ccc;
+  border-radius: 32px;
   text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 5px 10px 5px 10px;
+  margin: 15px;
+  background-color: #ffffffd3;
+  color: rgb(0, 0, 0);
 }
 
-h1 {
+table {
   color: aliceblue;
-  text-align: center;
+  width: 100%;
 }
